pulizia codice, correzione bug e implementazione di tutti i messaggi di gioco